crates/tesshir/tests/fixtures/check/associated_const_default_overflow.tess
interface Buffer {
    const SIZE: u8 = 256;
}
